wasm: fix QTcpSocket error code when url doesn't exist

::connect on wasm seems to be returning 0 in the instance that the
server url does not exist.
So we ignore that and look at errno, which returns ENOENT
which makes no sense here.

Fixes: QTBUG-132191
Change-Id: I2ff6642dd836324e1af6c288c53880de028ce158
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 1a8c8ffb0c45644c05ea1474df48bfdeea563524)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
Reviewed-by: Lorn Potter <lorn.potter@qt.io>